# lnc_mac_ai

./: .gitignore  README.md  pubspec.yaml
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle
android/app/scif2_src/head/: sc2.~h  scif2.h  scif2.~h  scif2_define.h  scif2_define.~h
android/app/scif2_src/scif2_linuxArmSo/: Makefile
android/app/scif2_src/src/: SpaceDefine.h  SpaceFunction.cpp  SpaceFunction.h  common_define.h  common_function.cpp  friend_client.cpp  proc_connect_build.cpp  proc_connect_build.h  proc_data_talk.cpp  proc_data_talk.h  proc_ftp.cpp  proc_ftp.h  proc_protocol.h  proc_sync_handle.cpp  proc_sync_handle.h  sc2.cpp  sc2_memory.cpp  sc2_memory.h  stringtoR.c
android/app/scif2_src/src/bak/: scif2.cpp  scif2.~cpp  scif2.~h  scif2_entry.cpp  scif2_global.~h  scif2_memory.cpp  scif2_memory.h  scif2_memory.~cpp  scif2_memory.~h
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/lnc_mach_app/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: global.dart  main.dart
lib/ai/: const_api.dart  const_values.dart
lib/providers/: background_container.dart  connection.dart  recorn.dart
lib/recorn/: recorn_bindings.dart  recorn_lib.dart
lib/res_fuc/: package_handler.dart
lib/utils/: add_machine.dart  app_limit_time.dart  routes.dart  storage.dart  web_uri.dart
lib/widgets/: back_button.dart  inapp_webview_widget.dart  machine_info_list_item.dart  widget_size_offset_wrapper.dart
test/: widget_test.dart
(+56 files in other folders)
